tests/compile_fails/tuple_ranme.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
struct TupleRename(#[dissolved(rename = "name")] String);

fn main() {}
